# unstdlib

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  unstdlib.pc.in
src/: _unstdcommon.c  _unstdcommon.h  lib.h  unstdbool.h  unstddescriptor.c  unstddescriptor.h  unstdinternal.c  unstdinternal.h  unstdinttypes.h  unstdio.c  unstdio.h  unstditertools.h  unstdlib.h  unstdmemory.c  unstdmemory.h  unstdpair.h  unstdqueue.c  unstdqueue.h  unstdsocket.c  unstdsocket.h  unstdstring.c  unstdstring.h  unstdvector.h
test/: _test_common.h  test_unstdlib.c  test_unstdlib.h
test/test_headers/_unstdcommon/: test__unstdcommon.c  test__unstdcommon.h
test/test_headers/unstddescriptor/: test_unstddescriptor.c  test_unstddescriptor.h
test/test_headers/unstdinternal/: test_unstdinternal.c  test_unstdinternal.h
test/test_headers/unstdinttypes/: test_unstdinttypes.c  test_unstdinttypes.h
test/test_headers/unstdio/: test_unstdio.c  test_unstdio.h
test/test_headers/unstdio/assests/: test_stringliteral
test/test_headers/unstditertools/: test_unstditertools.c  test_unstditertools.h
test/test_headers/unstdmemory/: test_unstdmemory.c  test_unstdmemory.h
test/test_headers/unstdpair/: test_unstdpair.c  test_unstdpair.h
test/test_headers/unstdqueue/: test_unstdqueue.c  test_unstdqueue.h
test/test_headers/unstdsocket/: test_unstdsocket.c  test_unstdsocket.h
test/test_headers/unstdstring/: test_unstdstring.c  test_unstdstring.h
test/test_headers/unstdvector/: test_unstdvector.c  test_unstdvector.h
